Refactor NGM segments to use symmetric exclusive bounds and bidirectional iteration
Redesign the Segment class to use symmetric exclusive bounds ]start, end[
instead of the previous mixed convention [startInclusive, endExclusive).
This simplifies bidirectional iteration by making boundary handling consistent
regardless of direction.

Key changes:
- Add TimeDirection enum (FORWARD/BACKWARD) to Segment
- Replace Segment constructor with forward()/backward() factory methods
- Unify iterateSegmentsFrom() and iterateSegmentsBackwardFrom() into single
  iterateSegmentsFrom(instant, direction) method
- Update segmentAt() to accept TimeDirection parameter
- Simplify LoadIntegrator API: move start/end from constructor to
  computeEnd(start)/computeStart(end) methods
- Change NGMTotalEffort.toSeconds() to return Fraction instead of long
- Add NGMTotalEffort.ofDays() factory method
- Remove PiecewiseConstant.apply() method (use segmentAt() instead)
- Update all PiecewiseConstant implementations for new segment conventions

This refactoring prepares the foundation for cleaner bidirectional scheduling
calculations in the NGM task model.